--- a/src/app/pages/contact-list/contact-list.component.html
+++ b/src/app/pages/contact-list/contact-list.component.html
@@ -36,17 +36,27 @@
         <tr *ngFor="let row of table.getRowModel().rows; trackBy: trackByRowId" class="border-b hover:bg-gray-50">
           <td *ngFor="let cell of row.getVisibleCells(); trackBy: trackByCellId" class="py-2 px-4">
             <ng-container
-              *flexRender="
-                cell.column.columnDef.cell;
-                props: cell.getContext();
-                let cellContent
-              "
+              *ngIf="cell.column.id === 'actions'; else defaultCell"
             >
-              <div [innerHTML]="cellContent"></div>
+              <a routerLink="/contacts/{{ cell.row.original.id }}" class="btn btn-info btn-sm self-stretch w-full flex">View</a>
+              <a routerLink="/contacts/edit/{{ cell.row.original.id }}" class="btn btn-warning btn-sm self-stretch w-full flex">Edit</a>
+              <button class="btn btn-danger btn-sm cursor-pointer" (click)="deleteContact(cell.row.original.id)">Delete</button>
             </ng-container>
+            <ng-template #defaultCell>
+              <ng-container
+                *flexRender="
+                  cell.column.columnDef.cell;
+                  props: cell.getContext();
+                  let cellContent
+                "
+              >
+                <div [innerHTML]="cellContent"></div>
+              </ng-container>
+            </ng-template>
           </td>
         </tr>
       </tbody>
+
       <tfoot class="bg-gray-100 border-t">
         <tr *ngFor="let footerGroup of table.getFooterGroups(); trackBy: trackByFooterGroupId">
           <th *ngFor="let footer of footerGroup.headers; trackBy: trackByFooterId" class="text-left py-2 px-4">
