--- a/src/app/pages/contact-form/contact-form.component.html
+++ b/src/app/pages/contact-form/contact-form.component.html
@@ -36,6 +36,10 @@
           name="phone_{{i}}"
         />
       </div>
+      <div class="flex gap-2">
+        <button type="button" (click)="addPhone()" class="btn btn-sm p-2 bg-green-500 text-white mt-2">Add Phone</button>
+        <button type="button" (click)="removePhone()" class="btn btn-sm p-2 bg-red-500 text-white mt-2">Remove Last Phone</button>
+      </div>
     </div>
 
     <div class="form-group flex- flex-col">
@@ -47,6 +51,10 @@
           [(ngModel)]="contact.emails[i].email_address"
           name="email_{{i}}"
         />
+      </div>
+      <div class="flex gap-2">
+        <button type="button" (click)="addEmail()" class="btn btn-sm p-2 bg-green-500 text-white mt-2">Add Email</button>
+        <button type="button" (click)="removeEmail()" class="btn btn-sm p-2 bg-red-500 text-white mt-2">Remove Last Email</button>
       </div>
     </div>
 
@@ -74,6 +82,10 @@
           [(ngModel)]="contact.addresses[i].zipcode"
           name="zipcode_{{i}}"
         />
+      </div>
+      <div class="flex gap-2">
+        <button type="button" (click)="addAddress()" class="btn btn-sm p-2 bg-green-500 text-white mt-2">Add Address</button>
+        <button type="button" (click)="removeAddress()" class="btn btn-sm p-2 bg-red-500 text-white mt-2">Remove Last Address</button>
       </div>
     </div>
 
